Fix resize-overflow issue

--- a/html/css/graphDisplay.css
+++ b/html/css/graphDisplay.css
@@ -1,4 +1,4 @@
 #main div > #graphDisplay.box{
 	height:calc(93vh - 40px);
-	width:calc(100vw - 40px);
+	width:95vw;
 }
